Fix text wrap club times - inc width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ ul {
 
 #hero-text>h2,
 h3 {
-    width: 16rem;
+    width: 18rem;
 }
 
 /* about the club section */
@@ -521,30 +521,12 @@ footer {
 }
 
 .top {
-    --offset: 100px;
-    /* control when the button appear */
-    position: ;
-    bottom: 20px;
-    margin-right: 10px;
-    /* place-self: end; */
-    margin-top: calc(100vh + var(--offset));
-    width: 20px;
-    aspect-ratio: 1;
-    background: #3B5822;
-    border-radius: 6px;
-    font-size: 0;
+    color: #3B5822;
+    font-size: 0.8rem;
+    border: 1px solid #3B5822;
 }
 
-.top:before {
-    content: "";
-    position: absolute;
-    inset: 30%;
-    transform: translateY(20%) rotate(-45deg);
-    border-top: 3px solid #fff;
-    border-right: 3px solid #fff;
+body>div {
+    margin-inline: max(3px, 50% - 800px/2);
 }
-
-/* body > div {
-    margin-inline: max(3px,50% - 800px/2);
-  }
 
